# claude-plugins

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json
.claude/commands/: commit.md  sync-upstream.md  update-superpowers-skills.md
aur/: README.md
aur/.claude-plugin/: plugin.json
aur/commands/: bump-version.md  create-aur-package.md
beads/: README.md
beads/.claude-plugin/: plugin.json
beads/hooks/: BEADS.md  hooks.json  session-init.sh
chores/: README.md  commands
chores/.claude-plugin/: plugin.json
haft/: .mcp.json  README.md
haft/.claude-plugin/: plugin.json
haft/context/: PRINCIPLES.md
haft/hooks/: session-init.sh
kanshi/: README.md
kanshi/.claude-plugin/: plugin.json
kanshi/dashboard/: app.js  index.html  styles.css
kanshi/hooks/: hooks.json
kanshi/server/: package.json  pnpm-lock.yaml
katachi/: README.md
katachi/.claude-plugin/: plugin.json
katachi/agents/: code-reviewer.md  codebase-analyzer.md  decision-reviewer.md  delta-validator.md  design-reviewer.md  doc-optimizer.md  doc-researcher.md  feature-validator.md  feedback-checker.md  impact-analyzer.md  optimization-validator.md  phase-executor.md  plan-reviewer.md  pr-updater.md  (+3 more)
lesserpowers/: README.md
memu/: .gitignore  README.md
quint/: .mcp.json  README.md
superpowers/: README.md
superpowers/skills/using-browser/: SKILL.md  pyproject.toml  test-cases.json
superpowers/skills/using-browser/agents/: browser-agent.md
superpowers/skills/using-browser/scripts/: browser-cli  browser-cli.py  browser-daemon  browser-daemon.py
zenku/: README.md
(+246 files in other folders)
